test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/0_name/ambiguous/DUPE_NAME_TYPE.t
class QWE {}

@static_test { expect_message={ level="LEVEL_ERROR", id="DUPE_NAME_TYPE", parameters={ id="QWE" } } }
class QWE {}
